# clinic-backend

clinic-backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  requirements.txt
clinic-backend/app/: __init__.py  conftest.py  main.py
clinic-backend/app/admin/: __init__.py  api.py  models.py  schemas.py  services.py
clinic-backend/app/api/: admin.py  auth.py  health.py
clinic-backend/app/appointments/: models.py  repository.py  routes.py  schemas.py  services.py  test_repository.py  test_service.py
clinic-backend/app/auth/: __init__.py  api.py  models.py  repository.py  routes.py  schemas.py  services.py  test_repository.py  test_service.py
clinic-backend/app/core/: config.py  constants.py  enum.py  exceptions.py  extensions.py  feature_flags.py  logger.py  rbac.py  security.py
clinic-backend/app/departments/: models.py  repository.py  routes.py  schemas.py  services.py  test_repository.py  test_service.py
clinic-backend/app/doctors/: models.py  repository.py  routes.py  schemas.py  services.py  test_repository.py  test_service.py
clinic-backend/app/models/: base.py  department.py  doctor.py  user.py
clinic-backend/app/reimbursements/: __init__.py  models.py  repository.py  routes.py  schemas.py  services.py  test_repository.py  test_service.py
clinic-backend/app/schemas/: __init__.py  admin.py  auth.py
clinic-backend/migrations/: env.py
clinic-backend/tests/: conftest.py  test_admin_doctor.py  test_admin_service.py  test_api_auth_admin.py  test_auth_service.py  test_doctors_list.py
(+7 files in other folders)
