[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-backend"
version = "0.1.0"
description = "Backend for the Clinic Application"
authors = [
    { name = "Amaan", email = "amaanmulla07@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "Flask==3.1.2",
    "Flask-JWT-Extended==4.7.1",
    "flask-marshmallow==1.4.0",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.3.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "marshmallow==4.2.2",
    "marshmallow-sqlalchemy==1.4.2",
    "PyJWT==2.11.0",
    "SQLAlchemy==2.0.46",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.5",
    "gunicorn==20.1.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv",
    "alembic",
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
